# breakpad

./: .drone.yml  .gitignore  .gitmodules  .travis.yml  Makefile.am  Makefile.in  appveyor.yml  breakpad.qbs  configure  configure.ac  meson.build
scripts/: travis-build.sh  travis-checkout.sh  travis-install-linux.sh
src/client/: client.qbs  meson.build
src/common/: common.qbs  meson.build
src/processor/: minidump.cc  processor.qbs
src/tools/: tools.qbs
src/tools/linux/: meson.build  tools_linux.qbs
src/tools/mac/: tools_mac.qbs
src/tools/windows/: tools_windows.qbs
